# exr-thumbnail-generator

./: .gitignore  CMakeLists.txt  README.md  argparse.hpp  exr-thumbnail-generator.cpp  exr-thumbnail-generator.h  package.json  release.config.js
.github/workflows/: ci.yml
